--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -394,3 +394,10 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #  define PTHREAD_MUTEX_ADAPTIVE_NP PTHREAD_MUTEX_NORMAL
 # endif
 #endif
+
+#if defined(mingw32) || defined(_MSC_VER) || defined(cygwin)
+# include <math.h>
+# ifndef isfinite
+#  define isfinite(x) (finite(x))
+# endif
+#endif
