Change CVS server.

--- a/Makefile.in
+++ b/Makefile.in
@@ -34,7 +34,7 @@ MACHINE = @MACHINE_VERSION@
 
 VERSION=@PACKAGE_VERSION@
 WWW=http://ecls.sourceforge.net/
-ADDRESS=anonymous@common-lisp.net:/project/ecl/cvsroot
+ADDRESS=anonymous@ecls.cvs.sourceforge.net:/cvsroot/ecls
 
 # ==================== Things `configure' Might Edit ====================
 
@@ -143,7 +143,7 @@ rpmbuild=$(shell if [ -z `which rpmbuild` ]; then echo "rpm"; else echo "rpmbuil
 # 	rpm -ba $(rpmdir)/SPECS/ecl.spec
 
 $(TAR_DIR):
-	cvs -z3 -d:pserver:anonymous:$(ADDRESS) co ecl && mv ecl $(TAR_DIR)
+	cvs -z3 -d:pserver:$(ADDRESS) co ecl && mv ecl $(TAR_DIR)
 $(TAR_DIR).tgz: $(TAR_DIR)
 	cd $(TAR_DIR) && cvs update -C -P -d
 	tar -cz --exclude '*~' --exclude '.#*' -f $(TAR_DIR).tgz $(TAR_DIR)
