Aliases are automatically generated and installed.

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -195,6 +195,12 @@
 	      :prefix "EXT")
 
 ;;;
+;;; * External formats
+;;;
+#+UNICODE
+(load "ext:encodings;generate.lisp")
+
+;;;
 ;;; * Compile the portable CLX library.
 ;;;
 
