Simplified c2call-global by taking the type propagation for (SETF AREF)/AREF into separate functions

--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -33,6 +33,7 @@
   "src:cmp;cmpnum.lsp"
   "src:cmp;cmpname.lsp"
   "src:cmp;cmpopt.lsp"
+  "src:cmp;cmpprop.lsp"
   "src:cmp;cmpclos.lsp"
   "src:cmp;cmpstructures.lsp"
   "src:cmp;cmparray.lsp"
