--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -55,7 +55,7 @@ OBJS	= main.o symbol.o package.o list.o\
 
 all:	$(DPP) ../libeclmin.a ../cinit.o
 
-.c.S: $(HFILES)
+.c.s: $(HFILES)
 	$(CC) -DECLDIR="\"@ecldir@\"" $(CFLAGS) -S -o $@ $<
 .c.o: $(HFILES)
 	$(CC) -DECLDIR="\"@ecldir@\"" $(CFLAGS) -o $@ $<
