New decimal constants ECL_VERSION_NUMBER (C/C++) and EXT:+ECL-VERSION-NUMBER+ (Lisp)

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -39,6 +39,9 @@
 # define ECL_API
 #endif
 
+/* Decimal number made with the formula yymmvv */
+#define ECL_VERSION_NUMBER @ECL_VERSION_NUMBER@
+
 /*
  * FEATURES LINKED IN
  */
